crates/rtlscope-tb/tests/snapshots/generation__a_cocotb_harness_for_a_synchronously_reset_counter.snap
---
source: crates/rtlscope-tb/tests/generation.rs
expression: "generated(\"counter.sv\", None, Flavor::Cocotb, TbOptions\n{ cycles: 100, ..TbOptions::default() })"
---
=== test_counter.py ===
"""Generated by `rtlscope tb-init` for `counter`.

The clocks and the reset were read out of the design, not guessed from
port names: every `always_ff` in the IR names the net it is clocked by
and the one that resets it. Everything else is left at zero — that is
where your stimulus goes.
"""

import cocotb
from cocotb.clock import Clock
from cocotb.triggers import ClockCycles, RisingEdge


async def reset(dut):
    """Holds every reset, then releases them together."""
    dut.rst_n.value = 0  # active low
    await ClockCycles(dut.clk, 5)
    dut.rst_n.value = 1
    await RisingEdge(dut.clk)


@cocotb.test()
async def runs(dut):
    """Runs the design so that there is a waveform to look at.

    Replace the wait at the end with something that drives the inputs and
    checks the outputs; the point of this one is only to produce a dump.
    """
    cocotb.start_soon(Clock(dut.clk, 10, unit="ns").start())  # 1 flop(s)

    # Tied off so nothing starts undriven. Your stimulus goes here.
    dut.en.value = 0

    await reset(dut)
    await ClockCycles(dut.clk, 100)

    dut._log.info(f"count = {dut.count.value}")

=== run.py ===
"""Builds and runs the generated testbench.

Everything platform-specific is in `rtlscope_site.py` beside this file;
on Linux and macOS it does nothing at all.
"""

import os
import sys
from pathlib import Path

here = Path(__file__).resolve().parent
sys.path.insert(0, str(here))

import rtlscope_site as site
import rtlscope_vpi as vpi

engine = os.environ.get("RTLSCOPE_ENGINE", "verilator")

# The order matters: the toolchain has to be findable before the
# interpreter can be checked against it, and the VPI archive has to
# exist before the runner tries to link against it. Only Verilator asks
# for either: cocotb ships its Icarus VPI on every platform, and Icarus
# takes whichever Python cocotb was installed into.
root = site.prepend_path(engine)
if engine == "verilator":
    site.check_interpreter(root)
    vpi.ensure()
if site.WINDOWS:
    os.environ["COCOTB_DLL_DIRS"] = site.sim_dll_dirs(root)

# Asking the runner for waves is not enough on its own: without this the
# simulator is told to suppress dumping and writes nothing at all.
os.environ["WAVES"] = "1"

sources = [
    r"<the sources>",
]

from cocotb_tools.runner import get_runner  # noqa: E402

runner = get_runner(engine)
build_args = site.common_build_args() if engine == "verilator" else ["-g2012"]
runner.build(
    sources=sources,
    hdl_toplevel="counter",
    build_args=build_args,
    timescale=("1ns", "1ps"),
    build_dir=here / "sim",
    waves=True,
    always=True,
)

runner.test(
    hdl_toplevel="counter",
    test_module="test_counter",
    test_dir=here,
    build_dir=here / "sim",
    waves=True,
)

dump = here / ("dump.vcd" if engine == "verilator" else "sim/counter.fst")
print(f"RTLSCOPE_DUMP={dump}")

=== README.md ===
# `counter` testbench

Generated by `rtlscope tb-init`. Run it from **PowerShell**:

```powershell
<venv>\Scripts\python.exe run.py
```

cocotb must be installed in that environment, and Icarus must be on the
path. Started from Git Bash, Icarus exits 127 with an empty stderr, which
reads exactly like success — hence PowerShell.

## What was read out of the design

- clock `clk` at 10 ns, driving 1 flop(s)
- reset `rst_n`, active low, synchronous
- tied off, awaiting real stimulus: en

## Then

```powershell
rtlscope wave-info sim\counter.fst <sources> --top counter
rtlscope decode sim\counter.fst --protocol <name> --auto <instance>
```

=== rtlscope_site.py === (generated toolchain, not shown)
=== rtlscope_vpi.py === (generated toolchain, not shown)
=== sitecustomize.py === (generated toolchain, not shown)
=== .rtlscope-toolchain/verilator.cmd === (generated toolchain, not shown)
=== notes ===
1 input(s) are neither clock nor reset and are tied off: en
