crates/rtlscope-tb/tests/snapshots/generation__a_plain_systemverilog_harness_is_self_contained.snap
---
source: crates/rtlscope-tb/tests/generation.rs
expression: "generated(\"counter.sv\", None, Flavor::Sv, TbOptions\n{ cycles: 40, ..TbOptions::default() })"
---
=== tb_counter.sv ===
`timescale 1ns / 1ps

// Generated by `rtlscope tb-init --flavor sv` for `counter`.
//
// The clocks and the reset were read out of the design rather than guessed
// from port names. Every other input is tied off and marked; that is where
// your stimulus goes.

module tb_counter ();

    logic clk;
    logic rst_n;
    logic en;
    wire  [7:0] count;

    // 1 flop(s) run on this.
    initial clk = 1'b0;
    always #5 clk = ~clk;

    // Tied off so nothing starts undriven.
    initial begin
        en = '0;
    end

    // Your stimulus goes here.

    initial begin
        rst_n = 1'b0;  // active low
        repeat (5) @(posedge clk);
        rst_n = 1'b1;
    end

    counter #(
        .W(8)
    ) u_dut (
        .clk(clk),
        .rst_n(rst_n),
        .en(en),
        .count(count)
    );

    initial begin
        $dumpfile("counter.fst");
        $dumpvars(0, tb_counter);
        repeat (40) @(posedge clk);
        $finish;
    end

endmodule

=== files.f ===
// The sources to compile, one per line.
<the sources>

=== run.ps1 ===
# Generated by `rtlscope tb-init --flavor sv`.
#
# Run this from PowerShell. Icarus started from Git Bash exits 127 with an
# empty stderr, which reads exactly like success.

iverilog -g2012 -o tb_counter.vvp -f files.f tb_counter.sv
if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
vvp tb_counter.vvp -fst
Write-Host "waveform: $PWD\counter.fst"

=== notes ===
1 input(s) are neither clock nor reset and are tied off: en
